<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/et_miembro_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbnome"
        android:layout_marginTop="40dp"
        android:ems="10" />
    <EditText
        android:id="@+id/et_miembro_profesionu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbprofesion"
        android:layout_marginTop="40dp"
        android:ems="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbotonmodificar" />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbotoneliminar" />
    </LinearLayout>

</LinearLayout>